[package]
name = "phubble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phubble"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
lophat = "0.9.2"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
